<resources>
    <string name="app_name">SCOS</string>
    <string name="main_screen_order_dish">点菜</string>
    <string name="main_screen_order_view">查看订单</string>
    <string name="main_screen_login_register">登陆/注册</string>
    <string name="main_screen_sys_help">系统帮助</string>

    <string name="user_name_text">登录名：</string>
    <string name="user_name_tips">请输入英文字母或数字</string>
    <string name="user_password_tips">请输入英文字母或数字</string>
    <string name="user_password_text">登录密码：</string>
    <string name="login_button">登录</string>
    <string name="login_return">返回</string>
    <string name="register_button">注册</string>
    <string name="food_order">点菜</string>
    <string name="food_no_order">退点</string>

    <string name="food_ordered">已点菜品</string>
    <string name="order_watch">查看订单</string>
    <string name="call_service">呼叫服务</string>
    <string name="start_real_time_update">启动实时更新</string>

    <string name="commit_acount">提交订单</string>
    <string name="check_out_acount">结账</string>
    <string name="remarks">备注</string>

    <string name="help_phone">5554</string>
    <string name="help_message">test scos helper</string>

    <string name="notification_cancel">清除</string>
    <string name="notification_new_food">新品上架</string>
</resources>
